--- a/CV-my_resume/index.html
+++ b/CV-my_resume/index.html
@@ -10,12 +10,12 @@
 			rel="stylesheet">
 	</head>
 	<body>
-	
+		
 		<!--main container-->
 		<div class="main-container">
 			<aside class="side-panel-left">
 				<div class="roof-side-panel-left"></div>
-				<img class="photo" src="./img/Ya.png" alt="My photo">
+				<img class="photo" src="./img/I-1.jpg" alt="My photo">
 				<!--contacts container-->
 				<div class="contacts-container">
 					<h3 class="contacts-title">Контакты</h3>
