--- a/CV-my_resume/index.html
+++ b/CV-my_resume/index.html
@@ -130,7 +130,7 @@
 					<!--company 1-->
 					<div>
 						<h4 class="profession-title">Частный предприниматель <span
-								class="profession-company">Производство</span> </h4>
+								class="profession-company">Малое производство</span> </h4>
 						<span class="profession-time">14.11.2015 - 14.06.2021<span
 								class="profession-divider">|</span> Ukraine</span>
 						<ul class="profession-duties">
