fix tech skills

--- a/CV-my_resume/index.html
+++ b/CV-my_resume/index.html
@@ -55,13 +55,13 @@
 								<span class="tech-skills-text">Figma</span>
 							</li>
 							<li class="tech-skills-item">
-								<span class="tech-skills-text">Основы JavaScript</span>
+								<span class="tech-skills-text"> JavaScrip (Basic)</span>
 							</li>
 							<li class="tech-skills-item">
-								<span class="tech-skills-text">Основы C</span>
+								<span class="tech-skills-text"> C (Basic)</span>
 							</li>
 							<li class="tech-skills-item">
-								<span class="tech-skills-text">Основы C++</span>
+								<span class="tech-skills-text"> C++ (Basic)</span>
 							</li>
 							<li class="tech-skills-item">
 								<span class="tech-skills-text">В процессе 1C"Предприятие 8"</span>
