--- a/CV-my_resume/index.html
+++ b/CV-my_resume/index.html
@@ -89,7 +89,7 @@
 			<div class="about-me-container">
 				<!--about me main info-->
 				<div class="info-container">
-					<h2 class="profession">1С Junior Developer (стажер)</h2>
+					<h2 class="profession"></h2>
 					<h1 class="name">Александр Цахло</h1>
 					<h3 class="about-me-title">О себе</h3>
 					<ul class="about-me">
